# lock_code_manager

./: .editorconfig  .eslintrc.cjs  .gitattributes  .gitignore  .gitmessage  .gitmodules  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  AGENTS.md  ARCHITECTURE.md  BLUEPRINTS.md  CLAUDE.md  COVERAGE_ANALYSIS.md  DASHBOARD_CONFIGURATION.md  DEVELOPMENT.md  LICENSE  README.md  TODO.md  codecov.yml  hacs.json  info.md  mypy.ini  package.json  pyproject.toml  requirements_dev.txt  requirements_lint.txt  requirements_test.txt  rollup.config.js  tsconfig.build.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.codex/: CODEX.md
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: .codecov.yaml  PULL_REQUEST_TEMPLATE.md  codecov.yaml  codecov.yml  copilot-instructions.md  dependabot.yaml  issue-labeler.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: auto-merge.yaml  ci-gate.yaml  combined.yaml  frontend-checks.yml  frontend.yaml  hacs.yaml  hassfest.yaml  integration.yaml  labeler.yaml  pytest.yaml  python-checks.yml  python.yaml  release-drafter.yaml  release.yaml  repository.yaml  vitest.yaml  yarn.yaml
00/6a670ead79/: metadata.json
00/a3a16a6cc2/: metadata.json
02/0a556624d8/: metadata.json
02/2640de3827/: metadata.json
02/58b8f7b253/: metadata.json
03/ca04bf0391/: metadata.json
04/2d1a50f18f/: metadata.json
04/395dbffe20/: metadata.json
04/930d559473/: metadata.json
04/b05e328082/: metadata.json
05/4231e82550/: metadata.json
05/c78feb96d5/: metadata.json
05/f9143a90fe/: metadata.json
06/81813e4a04/: metadata.json
06/9af78d7ab2/: metadata.json
06/bd50e78ebb/: metadata.json
06/c5905f0af0/: metadata.json
06/fd64996697/: metadata.json
07/aa28af7cbd/: metadata.json
08/0f896f83cb/: metadata.json
08/dab9fb6fc1/: metadata.json
09/1c1f0f5def/: metadata.json
09/cbffb5fe6b/: metadata.json
0a/3ec33ebd46/: metadata.json
0a/470d2b2493/: metadata.json
0b/04c742b713/: metadata.json
0b/4cb697df2e/: metadata.json
0c/2812ed31a8/: metadata.json
0e/3b84348e67/: metadata.json
0e/3cceeac379/: metadata.json
0e/596f411b47/: metadata.json
0e/7c78b7c4c5/: metadata.json
0f/22d2ccf61b/: metadata.json
0f/56f3ef72da/: metadata.json
0f/b5cf188fda/: metadata.json
10/28a19f8cac/: metadata.json
10/2f21247887/: metadata.json
10/a5130b42c6/: metadata.json
10/d0912a53d7/: metadata.json
12/6526616b1f/: metadata.json
12/7eb4c3f68f/: metadata.json
12/83613a00ff/: metadata.json
12/d4086ccde9/: metadata.json
13/64d4794295/: metadata.json
13/ab9d6e6085/: metadata.json
14/e5989ca4a8/: metadata.json
14/f4eca67291/: metadata.json
15/62ca4775c2/: metadata.json
15/971c204c1b/: metadata.json
15/cc7041b577/: metadata.json
15/e9eab44326/: metadata.json
15/f6aa03fd18/: metadata.json
15/ffa9dd144d/: metadata.json
16/0402c23276/: metadata.json
16/04523ac6c0/: metadata.json
16/1a8500f249/: metadata.json
17/8a72f326fc/: metadata.json
17/a993110214/: metadata.json
18/0b413b60c6/: metadata.json
18/c469f4c1f4/: metadata.json
18/cfaa86807d/: metadata.json
19/6f96e3cd1a/: metadata.json
19/9e50e254fe/: metadata.json
1a/64c8fdb5ac/: metadata.json
1a/a7b43f7505/: metadata.json
1a/fe709b28af/: metadata.json
1b/4c0ac6d809/: metadata.json
1b/830b08a285/: metadata.json
1d/3b9f1f40af/: metadata.json
1e/4014906b27/: metadata.json
20/98f401c1ec/: metadata.json
20/c12eeb2e6d/: metadata.json
21/1ccbb52823/: metadata.json
21/69976f1c53/: metadata.json
21/c6d0de4948/: metadata.json
22/8af06e3482/: metadata.json
22/9377d36ae4/: metadata.json
22/a809f9edb4/: metadata.json
22/e74aa312bd/: metadata.json
23/20a8faed0b/: metadata.json
23/4ba54f6100/: metadata.json
23/e0d56478d7/: metadata.json
24/54c01945c4/: metadata.json
25/39818a8670/: metadata.json
27/2ab318c4a6/: metadata.json
27/6fbbd9fc3c/: metadata.json
27/f6b5693847/: metadata.json
28/0388ff70c1/: metadata.json
dev/: configuration.yaml  virtual.yaml
docs/: FRONTEND_UNIFICATION.md  SLOT_CARD_DESIGN.md  wiki-ui-page-update.md
js/: const.ts  dashboard-strategy.ts  generate-view.ts  ha_type_stubs.ts  hacs-card.ts  helpers.ts  main.ts  types.ts  view-strategy.ts
scripts/: bootstrap-devcontainer  setup  setup-commit-template.ps1  setup-devcontainer
src/: const.ts  dashboard-strategy.ts  ha_type_stubs.ts  types.ts  view-strategy.ts
strategy/: .eslintrc.js  package.json  tsconfig.eslint.json  tsconfig.json
tests/: __init__.py  common.py  conftest.py  helpers.py  test_base.py  test_binary_sensor.py  test_blueprint_behavior.py  test_blueprints.py  test_callbacks.py  test_config.py  test_config_flow.py  test_coordinator.py  test_credentials.py  test_data.py  test_diagnostics.py  test_event.py  test_exceptions.py  test_helpers.py  test_init.py  test_number.py  test_pin_generator.py  test_queries.py  test_resilience.py  test_sensor.py  test_services.py  test_slot_coordinator.py  test_slot_manager.py  test_switch.py  test_sync.py  test_text.py  test_util.py  test_websocket.py
ts/: const.ts  dashboard-strategy.test.ts  dashboard-strategy.ts  generate-view.internal.ts  generate-view.test.ts  generate-view.ts  ha_type_stubs.ts  hacs-card.ts  lock-code-data-card-editor.ts  lock-code-data-card.test.ts  lock-code-data-card.ts  lock-codes-card-editor.test.ts  lock-codes-card-editor.ts  lock-codes-card.integration.test.ts  lock-codes-card.styles.ts  lock-codes-card.test.ts  lock-codes-card.ts  lock-section-strategy.ts  main.ts  no-mwc-components.test.ts  shared-styles.ts  slot-card-editor.test.ts  slot-card-editor.ts  slot-card.integration.test.ts  slot-card.styles.ts  slot-card.test.ts  slot-card.ts  slot-section-strategy.ts  slugify.test.ts  slugify.ts  strategy-utils.test.ts  strategy-utils.ts  subscription-mixin.integration.test.ts  subscription-mixin.test.ts  subscription-mixin.ts  types.ts  util.test.ts  view-strategy.test.ts  view-strategy.ts
(+2459 files in other folders)
