[project]
name = "lock-code-manager"
version = "0.0.0"
requires-python = ">=3.13"

[tool.ruff]
lint.select = ["D", "E", "F", "G", "I", "PLC", "PLE", "PLR", "PLW", "UP", "W"]
lint.ignore = [
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D212",    # Multi-line docstring summary should start at the first line (conflicts with D213)
    "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
    "E501",    # Line too long
    "PLR0911", # Too many return statements ({returns} > {max_returns})
    "PLR0912", # Too many branches ({branches} > {max_branches})
    "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
    "PLR0915", # Too many statements ({statements} > {max_statements})
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
]
exclude = [
    ".venv",
    ".git",
    ".tox",
    "docs",
    "venv",
    "bin",
    "lib",
    "deps",
    "build",
]
line-length = 88

[tool.ruff.lint.isort]
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "homeassistant",
    "first-party",
    "local-folder",
]
known-first-party = ["custom_components.lock_code_manager", "tests"]
combine-as-imports = true

[tool.ruff.lint.isort.sections]
"homeassistant" = ["homeassistant"]


[tool.pylint.MASTER]
ignore = ["tests"]
# Use a conservative default here; 2 should speed up most setups and not hurt
# any too bad. Override on command line as appropriate.
# Disabled for now: https://github.com/PyCQA/pylint/issues/3584
#jobs = 2
load-plugins = ["pylint_strict_informational"]
persistent = false
extension-pkg-whitelist = ["ciso8601", "cv2"]

[tool.pylint.BASIC]
good-names = ["_", "ev", "ex", "fp", "i", "id", "j", "k", "Run", "T"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "abstract-method",              # Async interfaces always have methods missing
    "cyclic-import",                # Doesn't test if both import on load
    "duplicate-code",               # Unavoidable in similar entity modules
    "format",                       # Handled by ruff format
    "inconsistent-return-statements", # Doesn't handle raise
    "locally-disabled",             # Spams too much noise
    "not-context-manager",          # False positives with HA patterns
    "too-few-public-methods",       # Not enforced for readability
    "too-many-ancestors",           # Too strict for HA entity inheritance chains
    "too-many-arguments",           # Not enforced for readability
    "too-many-boolean-expressions", # Not enforced for readability
    "too-many-branches",            # Not enforced for readability
    "too-many-instance-attributes", # Not enforced for readability
    "too-many-lines",               # Not enforced for readability
    "too-many-locals",              # Not enforced for readability
    "too-many-public-methods",      # Not enforced for readability
    "too-many-return-statements",   # Not enforced for readability
    "too-many-statements",          # Not enforced for readability
    "unused-argument",              # Generic callbacks and setup methods create false positives
    "wrong-import-order",           # Handled by ruff isort
]
enable = [
    #"useless-suppression",  # temporarily every now and then to clean them up
    "use-symbolic-message-instead",
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.TYPECHECK]
ignored-classes = [
    "_CountingAttr", # for attrs
]

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = ["BaseException", "Exception", "HomeAssistantError"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]

[tool.mypy]
ignore_missing_imports = true
implicit_reexport = true
show_error_codes = true
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = [
    "ignore-without-code", # Require error codes on type: ignore comments
    "redundant-self",      # Flag redundant Self type annotations
    "truthy-iterable",     # Flag always-truthy iterable checks
]
disable_error_code = [
    "annotation-unchecked", # Don't flag unchecked type annotations in untyped functions
    "call-arg",             # Don't flag unexpected/missing keyword arguments (HA API compat)
]
